refactor: extract Swagger documentation to GitHubApiDoc interface and remove IDE warnings